ros2_ws/log/build_2024-03-25_17-10-11/metrojoe/stdout_stderr.log
running develop
Removing /ros2_ws/install/metrojoe/lib/python3.10/site-packages/metrojoe.egg-link (link to .)
running egg_info
writing ../../build/metrojoe/metrojoe.egg-info/PKG-INFO
writing dependency_links to ../../build/metrojoe/metrojoe.egg-info/dependency_links.txt
writing entry points to ../../build/metrojoe/metrojoe.egg-info/entry_points.txt
writing requirements to ../../build/metrojoe/metrojoe.egg-info/requires.txt
writing top-level names to ../../build/metrojoe/metrojoe.egg-info/top_level.txt
reading manifest file '../../build/metrojoe/metrojoe.egg-info/SOURCES.txt'
writing manifest file '../../build/metrojoe/metrojoe.egg-info/SOURCES.txt'
running build
running build_py
copying metrojoe/node_basics.py -> /ros2_ws/build/metrojoe/build/lib/metrojoe
copying metrojoe/ds4_gamepad_node.py -> /ros2_ws/build/metrojoe/build/lib/metrojoe
copying metrojoe/ds4_gamepad.py -> /ros2_ws/build/metrojoe/build/lib/metrojoe
running install
running install_lib
creating /ros2_ws/install/metrojoe/lib/python3.10/site-packages/metrojoe
copying /ros2_ws/build/metrojoe/build/lib/metrojoe/node_basics.py -> /ros2_ws/install/metrojoe/lib/python3.10/site-packages/metrojoe
copying /ros2_ws/build/metrojoe/build/lib/metrojoe/ds4_gamepad_node.py -> /ros2_ws/install/metrojoe/lib/python3.10/site-packages/metrojoe
copying /ros2_ws/build/metrojoe/build/lib/metrojoe/__init__.py -> /ros2_ws/install/metrojoe/lib/python3.10/site-packages/metrojoe
copying /ros2_ws/build/metrojoe/build/lib/metrojoe/main.py -> /ros2_ws/install/metrojoe/lib/python3.10/site-packages/metrojoe
copying /ros2_ws/build/metrojoe/build/lib/metrojoe/modbus_motor_controller.py -> /ros2_ws/install/metrojoe/lib/python3.10/site-packages/metrojoe
copying /ros2_ws/build/metrojoe/build/lib/metrojoe/ds4_gamepad.py -> /ros2_ws/install/metrojoe/lib/python3.10/site-packages/metrojoe
byte-compiling /ros2_ws/install/metrojoe/lib/python3.10/site-packages/metrojoe/node_basics.py to node_basics.cpython-310.pyc
byte-compiling /ros2_ws/install/metrojoe/lib/python3.10/site-packages/metrojoe/ds4_gamepad_node.py to ds4_gamepad_node.cpython-310.pyc
  File "/ros2_ws/install/metrojoe/lib/python3.10/site-packages/metrojoe/ds4_gamepad_node.py", line 4
    from 
         ^
SyntaxError: invalid syntax

byte-compiling /ros2_ws/install/metrojoe/lib/python3.10/site-packages/metrojoe/__init__.py to __init__.cpython-310.pyc
byte-compiling /ros2_ws/install/metrojoe/lib/python3.10/site-packages/metrojoe/main.py to main.cpython-310.pyc
byte-compiling /ros2_ws/install/metrojoe/lib/python3.10/site-packages/metrojoe/modbus_motor_controller.py to modbus_motor_controller.cpython-310.pyc
byte-compiling /ros2_ws/install/metrojoe/lib/python3.10/site-packages/metrojoe/ds4_gamepad.py to ds4_gamepad.cpython-310.pyc
running install_data
copying package.xml -> /ros2_ws/install/metrojoe/share/metrojoe
creating /ros2_ws/install/metrojoe/share/metrojoe/msg
copying msg/Gamepad.msg -> /ros2_ws/install/metrojoe/share/metrojoe/msg
running install_egg_info
Copying ../../build/metrojoe/metrojoe.egg-info to /ros2_ws/install/metrojoe/lib/python3.10/site-packages/metrojoe-0.0.0-py3.10.egg-info
running install_scripts
Installing ds4_gamepad_node script to /ros2_ws/install/metrojoe/lib/metrojoe
Installing ds4_gamepad_test script to /ros2_ws/install/metrojoe/lib/metrojoe
Installing main script to /ros2_ws/install/metrojoe/lib/metrojoe
writing list of installed files to '/ros2_ws/build/metrojoe/install.log'
